-===============================================================================
Change history for translation-utility
================================================================================

DONE:
10/8/08 - eliminated need for PhetApplicationConfig, get everything needed from PhetResources
9/22/08 - center Close button in ExceptionDialog
********* version 1.04.00 (24643)
9/22/08 - explicitly read and add manifest to test jar for Flash sims, same problem here as Java sims (Unfuddle 720) 
9/22/08 - move shared instance data, interfaces, and utilities to AbstractSimulation
9/22/08 - ignore manifest file when copying jar entries, this causes problems on Mac (Unfuddle 720)
9/22/08 - explicitly read manifest from Java sim jars, use to create JarOutputStream, needed by Windows (Unfuddle 720)
********* version 1.03.00 (24629)
9/22/08 - build jar file with line# and source file debugging info enabled, so that this info is in stack traces (Unfuddle 720)
9/22/08 - add info to exception dialog (version, stack trace, etc), to be reported to phethelp (Unfuddle 720)
9/22/08 - replace JOptionPane with custom ExceptionDialog for notifying the user about exceptions (Unfuddle 720)
9/22/08 - fix title on dialog that reports non-fatal exceptions
********* version 1.02.00 (24619)
9/21/08 - comparison of SVN revision numbers in update feature was "remote != local", should be "remote > local" so that dev versions aren't confused
9/21/08 - workaround for problem with "Test" feature, couldn't find manifest in Offline JAR files after they had been modified by deploy-translation task
********* version 1.01.00 (24616)
9/21/08 - fix version number, it was displaying 1.-1.00
9/5/08 - remove uses of DialogUtils, replace with JOptionPane
9/5/08 - improve validation code for InitializationDialog
9/5/08 - move error messages out of strings file and into InitializationDialog
8/27/08 - manually update and publish website files for 1.00.00 release
********* version 1.00.00 (23942)